# hc_client

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  hc_client.cpp  main.cpp
include/: device.hpp  session.hpp
test/: test.cpp
